Code cleanup - Do not need z-index styling.  Fix by moving the image so that the search bar overlays on the cloud image. - Use a more descriptive id - Remove unneeded Asap setting since Asap is the default font-family - Remove accidental introduction of the where_exp filter

--- a/src/main/content/_assets/css/guides.css
+++ b/src/main/content/_assets/css/guides.css
@@ -82,14 +82,13 @@
     margin-top: 0;
     margin-bottom: 14px;
     font-family: BunueloLight;
-    font-size: 28px;
+    font-size: 30px;
     color: #24253A;
     letter-spacing: 0;
 }
 
 #guides_search_container {
     text-align: right;
-    z-index: 1;
 }
 
 #guides_search_container .popover {
@@ -120,7 +119,6 @@
 }
 
 .tags_title {
-    font-family: Asap;
     font-size: 11px;
     color: #24243b;
 }
@@ -133,7 +131,6 @@
     border-radius:46px;
     padding: 2px 12px;
     margin-bottom: 5px;
-    font-family: Asap;
     font-size: 14px;
     text-transform: uppercase;
     opacity: 0.5;
@@ -171,7 +168,7 @@
     color: white;
 }
 
-#guides_container {
+#guides_microprofile_container {
     width: 100%;
     margin-bottom: 52px;
     padding-top: 15px;
@@ -216,12 +213,11 @@
     right: 0px;
     height: 185px;
     width: 708px;
-    z-index: 0;
 }
 
 @media (max-width: 767px) {
 
-    #guides_container {
+    #guides_microprofile_container {
         margin-bottom: 30px;
     }
 
